--- a/wp-content/themes/eyeconbeauty/scss/site/_variables.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_variables.scss
@@ -14,3 +14,11 @@ $red-color: #EB5757;
 
 $font-family: 'Manrope', sans-serif;
 $letter-spacing: 0.05em;
+$s-pd: 27px;
+$m-pd: 64px;
+$l-pd: 152px;
+$xl-pd: 208px;
+
+$m-wd: 800px;
+$l-wd: 1024px;
+$xl-wd: 1280px;
