💄 feat: left carousel hide buttons + product size

--- a/wp-content/themes/eyeconbeauty/scss/about/_community-slider.scss
+++ b/wp-content/themes/eyeconbeauty/scss/about/_community-slider.scss
@@ -7,6 +7,10 @@
   }
 
   .community-slider-wrapper {
+
+    .flickity-button {
+      display: none;
+    }
       
     .community-images__pair {
       @include d-flex(column, 0);
