--- a/wp-content/themes/eyeconbeauty/scss/site/_site.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_site.scss
@@ -47,7 +47,23 @@ body {
 
 .container {
 	@include d-flex(column, 0);
-	padding-left: 27px;
-	padding-right: 27px;
+	padding-left: $s-pd;
+	padding-right: $s-pd;
 	padding-bottom: 2rem;
+	@include max-width-center($xl-wd);
+
+	@include mq(min-width, $m-wd) {
+    padding-left: $m-pd;
+		padding-right: $m-pd;
+  }
+
+  @include mq(min-width, $l-wd) {
+    padding-left: $l-pd;
+		padding-right: $l-pd;
+  }
+
+  @include mq(min-width, $xl-wd) {
+    padding-left: $xl-pd;
+		padding-right: $xl-pd;
+  }
 }
