--- a/wp-content/themes/eyeconbeauty/scss/products/_collection-control.scss
+++ b/wp-content/themes/eyeconbeauty/scss/products/_collection-control.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 $s-pd 2rem;
-  @include max-width-center($xl-wd);
+  @include max-width-center();
 
   @include mq(min-width, $m-wd) {
     padding: 0 $m-pd 2rem;
