--- a/wp-content/themes/eyeconbeauty/scss/products/_product-list.scss
+++ b/wp-content/themes/eyeconbeauty/scss/products/_product-list.scss
@@ -4,7 +4,7 @@
   padding: 0 20px;
   flex-wrap: wrap;
   justify-content: space-between;
-  @include max-width-center($xl-wd);
+  @include max-width-center();
 
   @include mq(min-width, $m-wd) {
     padding: 0 $m-pd;
