--- a/wp-content/themes/eyeconbeauty/scss/site/_buttons.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_buttons.scss
@@ -3,7 +3,11 @@
   padding: 1rem;
   text-transform: uppercase;
   font-size: 1.166667rem;
-  font-weight: 600;
+  font-weight: 500;
+  @include mq(min-width, $m-wd) {
+    padding: 0.75rem;
+    font-size: 1rem;
+  }
 
   &.btn-product {
     @include d-flex(row, 0);
