--- a/wp-content/themes/eyeconbeauty/scss/account/_address.scss
+++ b/wp-content/themes/eyeconbeauty/scss/account/_address.scss
@@ -8,6 +8,9 @@
     address {
       margin-left: 1rem;
       font-style: normal;
+      @include mq(min-width, $m-wd) {
+        font-size: 0.75rem;
+      }
     }
 
     .edit {
@@ -16,6 +19,9 @@
       margin-left: 1rem;
       font-weight: 600;
       border-bottom: 1px solid $text-color;
+      @include mq(min-width, $m-wd) {
+        font-size: 0.75rem;
+      }
     }
   }
 }
