--- a/wp-content/themes/eyeconbeauty/scss/account/_orders.scss
+++ b/wp-content/themes/eyeconbeauty/scss/account/_orders.scss
@@ -36,6 +36,10 @@
       border-bottom: 1px solid $grey4;
       padding-bottom: 2rem;
 
+      @include mq(min-width, $l-wd) {
+        font-size: 0.75rem;
+      }
+
       td {
         display: flex;
       }
@@ -46,6 +50,10 @@
 
       .btn  {
         padding: 0.5rem 1rem;
+        @include mq(min-width, $l-wd) {
+          font-size: 0.75rem;
+        }
+  
       }
 
       &:last-child {
