💄 feat: topbar & footer checkout mediaqueries

--- a/wp-content/themes/eyeconbeauty/scss/site/_footer.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_footer.scss
@@ -187,6 +187,11 @@ footer {
             display: block;
             text-align: right;
           }
+
+          @include mq(min-width, $m-wd){
+            @include d-flex(row, 1rem);
+          }
+          
         }
       }
       .footer-logo {
